fix: alert bb sparkline spacing

--- a/visualizations/nr-alert-billboard/styles.scss
+++ b/visualizations/nr-alert-billboard/styles.scss
@@ -14,7 +14,7 @@
     justify-content: center;
     width: 100%;
     margin-top: 16vh;
-    margin-bottom: 12px;
+    margin-bottom: 8vw;
 }
 
 .alert-billboard {
